[package]
name = "upk_decrypter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
positioned-io = "0.2.2"
aes = "0.7"
block-modes = "0.8"
miniz_oxide = "0.5.1"
hex = "0.4.3"
base64 = "0.13.0"
glob = "0.3.0"
log = "0.4.1"