[package]
name = "upk_decrypter_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
upk_decrypter = { path = "../upk_decrypter" }

clap = { version = "3.1.6", features = ["derive"] }
simple_logger = { version = "2.1.0", features = ["timestamps", "colors"] }
path-absolutize = "3.0.12"
log = "0.4.1"